fix all tte claims